RESOLVED FIXED79728
sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html crashes in the interpreter
https://bugs.webkit.org/show_bug.cgi?id=79728
Summary sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html crashes in the interpreter
Oliver Hunt
Reported 2012-02-27 18:28:08 PST
sputnik/Unicode/Unicode_500/S7.2_A1.6_T1.html crashes in the interpreter
Attachments
Patch (2.45 KB, patch)
2012-02-27 18:30 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2012-02-27 18:30:55 PST
Oliver Hunt
Comment 2 2012-02-27 18:35:46 PST
Daniel Drake
Comment 3 2012-08-28 08:51:49 PDT
In Fedora, webkit is shipped with the JIT disabled on ARM as it is crashy (bug #85076). However, the latest edition of Google's homepage was crashing the non-JIT version of webkit (on webkitgtk-1.8.x). http://bugs.sugarlabs.org/ticket/3776 The patch in this bug solves the issue - thanks.
Note You need to log in before you can comment on or make changes to this bug.